// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnNormalizer does not crash on all-zero grids 1`] = `
Array [
  Array [
    0,
    0,
    0,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
]
`;

exports[`ColumnNormalizer normalizes a complete grid correctly 1`] = `
Array [
  Array [
    1,
    1,
    1,
    0.25,
  ],
  Array [
    0,
    0,
    0.5,
    0,
  ],
  Array [
    1,
    0.5,
    0,
    1,
  ],
]
`;

exports[`ColumnNormalizer normalizes a grid with negative values correctly 1`] = `
Array [
  Array [
    1,
    1,
    0,
    0.25,
  ],
  Array [
    0.375,
    0,
    1,
    0,
  ],
  Array [
    0,
    0.5,
    0.6666666666666666,
    1,
  ],
]
`;
